# specs-cookiecutter

./: .gitreview  CONTRIBUTING.rst  README.rst  cookiecutter.json
{{cookiecutter.repo_name}}/: .gitignore  CONTRIBUTING.rst  requirements.txt  setup.cfg  template.rst  tox.ini
{{cookiecutter.repo_name}}/doc/source/: conf.py  index.rst
